fixed overlapping text issue with cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,15 @@ header {
     text-transform: uppercase;
     text-align: center;
 }
+
+.card__header h4 {
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
+}
+
 .card__body {
     padding: 30px;
 }
@@ -161,6 +170,20 @@ header {
     color: rgba(255, 255, 255, 1);
     box-shadow: 0 25px 45px rgba(145, 92, 182, .4);
   }
-#gameId, #mealId, #drinkId {
+
+/* commenting out grayscale for now */
+
+/* #gameId, #mealId, #drinkId {
     filter: grayscale(100%);
+} */
+
+/* .drink-pic {
+    width: 400px;
+    height: 400px;
+    object-fit: fill;
+    object-position: 5px 10%;
 }
+
+.drink-result-name {
+    margin-bottom: 50;
+} */
